--- a/src/app/order-list/order-list.component.css
+++ b/src/app/order-list/order-list.component.css
@@ -1,3 +1,18 @@
 .center {
     text-align: center;
 }
+
+.page-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.size {
+    height: 50vh;
+}
+
+.head-text {
+    margin-top: 2vh;
+}
