--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,3 +1,6 @@
 <div class="options-base">
-
+    <button routerLink="../" class="btn btn-light"><i class="fa fa-home"></i></button>
+    <button routerLink="../buyer" class="btn btn-light">Consumer</button>
+    <button routerLink="../seller" class="btn btn-light">Seller</button>
+    <button routerLink="../orderList" class="btn btn-light"><i class="fa fa-shopping-cart"></i></button>
 </div>
