--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -1,4 +1,4 @@
-<h2 class="center">Ordered Items</h2>
+<p class="center head-text">Ordered Items</p>
 <div class="card bg-light text-dark" *ngFor="let item of orderItems">
     <div class="card-body center">
         <h4 class="card-title">{{ item.name }} </h4>
@@ -8,6 +8,6 @@
 <!-- <div *ngIf="price > 0">
     <h3>Total Amount: {{ totalPrice }}</h3>
 </div> -->
-<div class="center">
-    <button class="btn btn-light" routerLink="../buyer">Buyer</button>
+<div class="page-center size" *ngIf="orderItems.length == 0">
+    <p>Your cart feels too light</p>
 </div>
