--- a/src/app/seller/seller.component.html
+++ b/src/app/seller/seller.component.html
@@ -1,14 +1,15 @@
-<form class="center" (ngSubmit)="onSubmit(menuForm.value)" [formGroup]="menuForm">
-    <div class="form-group">
-        <label for="name">Item Name</label>
-        <input id="name" class="form-control" type="text" formControlName="name">
-    </div>
-    <div class="form-group">
-        <label for="price">Item Price</label>
-        <input id="price" class="form-control" type="number" formControlName="price">
-    </div>
-    <button class="btn btn-success" type="submit">Submit</button>
-</form>
-<div class="center">
-    <button type="button" class="btn btn-light" routerLink="../buyer">Buyer</button>
+<p class="center head-text">Add product</p>
+
+<div class="container">
+    <form class="center" (ngSubmit)="onSubmit(menuForm.value)" [formGroup]="menuForm">
+        <div class="form-group">
+            <label for="name">Item Name</label>
+            <input id="name" class="form-control" type="text" formControlName="name">
+        </div>
+        <div class="form-group">
+            <label for="price">Item Price</label>
+            <input id="price" class="form-control" type="number" formControlName="price">
+        </div>
+        <button class="btn btn-success" type="submit">Submit</button>
+    </form>
 </div>
