--- a/src/app/options/options.component.css
+++ b/src/app/options/options.component.css
@@ -1,10 +1,7 @@
-.options-base {
-    background-color: rgb(168, 179, 179);
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-around;
+nav {
+    margin: 0;
+}
+
+.center {
+    text-align: center;
 }
