--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,6 +1,13 @@
-<div class="options-base">
-    <button routerLink="../" class="btn btn-light"><i class="fa fa-home"></i></button>
-    <button routerLink="../buyer" class="btn btn-light">Consumer</button>
-    <button routerLink="../seller" class="btn btn-light">Seller</button>
-    <button routerLink="../orderList" class="btn btn-light"><i class="fa fa-shopping-cart"></i></button>
-</div>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+            <li class="nav-item center"><a class="nav-link" routerLink="../"><i class="fa fa-home"></i> Home</a></li>
+            <li class="nav-item center"><a class="nav-link" routerLink="../buyer">Consumer</a></li>
+            <li class="nav-item center"><a class="nav-link" routerLink="../seller">Seller</a></li>
+            <li class="nav-item center"><a class="nav-link" routerLink="../orderList"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+        </ul>
+    </div>
+</nav>
