--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -1,13 +1,15 @@
-<p class="center head-text">Ordered Items</p>
-<div class="card bg-light text-dark" *ngFor="let item of orderItems">
-    <div class="card-body center">
-        <h4 class="card-title">{{ item.name }} </h4>
-        <p class="card-text">Price: ₹{{ item.price }} </p>
+<div class="all-menu">
+    <p class="center head-text">Ordered Items</p>
+    <div class="card bg-light text-dark" *ngFor="let item of orderItems">
+        <div class="card-body center">
+            <h4 class="card-title">{{ item.name }} </h4>
+            <p class="card-text">Price: ₹{{ item.price }} </p>
+        </div>
     </div>
-</div>
-<!-- <div *ngIf="price > 0">
-    <h3>Total Amount: {{ totalPrice }}</h3>
+    <!-- <div *ngIf="price > 0">
+<h3>Total Amount: {{ totalPrice }}</h3>
 </div> -->
-<div class="page-center size" *ngIf="orderItems.length == 0">
-    <p>Your cart feels too light</p>
+    <div class="page-center size" *ngIf="orderItems.length == 0">
+        <p>Your cart feels too light</p>
+    </div>
 </div>
