--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,10 +1,12 @@
-<div class="base">
-    <p class="text">Choose the food<br /> you love . . .</p>
+<div class="base"><br><br>
+    <h2 class="text-center">Choose the food you love . . .</h2>
     <div class="categories">
         <button type="button" class="btn btn-light">Traditional</button>
         <button type="button" class="btn btn-light">Drinks</button>
         <button type="button" class="btn btn-light">Fast Food</button>
     </div>
-    <app-top-pick-menu class="menu-grid"></app-top-pick-menu>
-    <!-- <app-options></app-options> -->
+    <div class="container today-menu">
+        <h2 class="text-center">Today's top Picks</h2><br><br>
+        <app-top-pick-menu></app-top-pick-menu>
+    </div>
 </div>
