--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -4,10 +4,10 @@
       </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
-            <li class="nav-item center"><a class="nav-link" routerLink="../"><i class="fa fa-home"></i> Home</a></li>
-            <li class="nav-item center"><a class="nav-link" routerLink="../buyer">Consumer</a></li>
-            <li class="nav-item center"><a class="nav-link" routerLink="../seller">Seller</a></li>
-            <li class="nav-item center"><a class="nav-link" routerLink="../orderList"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+            <li class="nav-item text-center"><a class="nav-link" routerLink="../"><i class="fa fa-home"></i> Home</a></li>
+            <li class="nav-item text-center"><a class="nav-link" routerLink="../buyer">Consumer</a></li>
+            <li class="nav-item text-center"><a class="nav-link" routerLink="../seller">Seller</a></li>
+            <li class="nav-item text-center"><a class="nav-link" routerLink="../orderList"><i class="fa fa-shopping-cart"></i> Cart</a></li>
         </ul>
     </div>
 </nav>
