--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -1,4 +1,4 @@
-.base {
+/* .base {
     background-color: white;
     background-repeat: no-repeat;
 }
@@ -12,4 +12,4 @@
 
 .today-menu {
     margin: 5vh auto;
-}
+} */
