--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,12 +1,14 @@
-<div class="base"><br><br>
-    <h2 class="text-center">Choose the food you love . . .</h2>
-    <div class="categories">
-        <button type="button" class="btn btn-light">Traditional</button>
-        <button type="button" class="btn btn-light">Drinks</button>
-        <button type="button" class="btn btn-light">Fast Food</button>
+<div class="container">
+    <br><br>
+    <h1 class="header center orange-text">Frezzo</h1>
+    <div class="row center">
+        <h5 class="header col s12 light">Choose the food you love . . .</h5>
     </div>
-    <div class="container today-menu">
-        <h2 class="text-center">Today's top Picks</h2><br><br>
-        <app-top-pick-menu></app-top-pick-menu>
+    <div class="row center">
+        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange">Go To Menu</a>
     </div>
+    <br><br>
+
+    <app-top-pick-menu></app-top-pick-menu>
+
 </div>
