--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,13 +1,25 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">
-            <li class="nav-item text-center"><a class="nav-link" routerLink="../"><i class="fa fa-home"></i> Home</a></li>
-            <li class="nav-item text-center"><a class="nav-link" routerLink="../buyer">Consumer</a></li>
-            <li class="nav-item text-center"><a class="nav-link" routerLink="../seller">Seller</a></li>
-            <li class="nav-item text-center"><a class="nav-link" routerLink="../orderList"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+<nav class="light-blue lighten-1">
+    <div class="nav-wrapper container">
+        <a routerLink="../" class="brand-logo">Logo</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+            <li><a routerLink="../"><i class="material-icons left">home</i> Home</a>
+            </li>
+            <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
+            <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
+            <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>Cart</a></li>
         </ul>
     </div>
 </nav>
+
+<ul class="sidenav" id="mobile-demo">
+    <li><a routerLink="../"><i class="material-icons left">home</i> Home</a>
+    </li>
+    <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
+    <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
+    <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>Cart</a></li>
+</ul>
+
+<script>
+
+</script>
