--- a/src/app/top-pick-menu/top-pick-menu.component.html
+++ b/src/app/top-pick-menu/top-pick-menu.component.html
@@ -1,9 +1,24 @@
-<div class="row d-flex justify-content-around">
+<!-- <div class="row d-flex justify-content-around">
     <div class="card" *ngFor="let item of items">
         <img src="../../assets/fast food.jpg" class="card-img-top">
         <div class="card-body">
             <h5 class="card-title">{{ item.name }}</h5>
             <p class="card-text">Price: ₹{{ item.price }}</p>
+        </div>
+    </div>
+</div> -->
+
+<div class="row center">
+    <div class="col s12 m4" *ngFor="let item of items">
+        <div class="card">
+            <div class="card-image">
+                <img src="../../assets/fast food.jpg">
+                <a (click)="addToCart(item)" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            </div>
+            <div class="card-content">
+                <span class="card-title">{{ item.name }}</span>
+                <p>Price: ₹{{ item.price }}</p>
+            </div>
         </div>
     </div>
 </div>
