--- a/src/app/seller/seller.component.html
+++ b/src/app/seller/seller.component.html
@@ -18,7 +18,7 @@
             </div>
             <br>
             <div class="row center">
-                <button class="btn waves-effect waves-light" type="submit">Submit<i class="material-icons right">send</i></button>
+                <button class="btn waves-effect waves-light" onclick="M.toast({html: 'Item Added!'})" type="submit">Submit<i class="material-icons right">send</i></button>
             </div>
         </form>
     </div>
