--- a/src/app/buyer/buyer.component.html
+++ b/src/app/buyer/buyer.component.html
@@ -1,4 +1,4 @@
-<div class="all-menu">
+<!-- <div class="all-menu">
     <p class="center head-text">Menu </p>
     <div class="card bg-light text-dark" *ngFor="let item of menuItems">
         <div class="card-body center">
@@ -8,7 +8,30 @@
         </div>
     </div>
 
-    <div class="page-center size" *ngIf="menuItems.length == 0">
-        <p>Seller do not have any product listed</p>
+    
+</div> -->
+
+<div class="container">
+    <div class="row center">
+        <div class="col s12 m4" *ngFor="let item of menuItems">
+            <div class="card">
+                <div class="card-image">
+                    <img src="../../assets/fast food.jpg">
+                    <a (click)="addToCart(item)" class="btn-floating halfway-fab waves-effect waves-light red"><i
+                            class="material-icons">add</i></a>
+                </div>
+                <div class="card-content">
+                    <span class="card-title">{{ item.name }}</span>
+                    <p>Price: ₹{{ item.price }}</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col s12 m12 page-center" *ngIf="menuItems.length == 0">
+            <i class="material-icons large">hourglass_empty</i>
+            <h5>Seller do not have any product listed</h5>
+        </div>
+
     </div>
 </div>
