Added options in mobile navbar

--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,5 +1,5 @@
 <nav class="light-blue lighten-1">
-    <div class="nav-wrapper container">
+    <div class="nav-wrapper">
         <a routerLink="../" class="brand-logo">Logo</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
@@ -7,19 +7,27 @@
             </li>
             <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
             <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
-            <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>Cart</a></li>
+            <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
         </ul>
     </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a routerLink="../"><i class="material-icons left">home</i> Home</a>
-    </li>
+    <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
     <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
     <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
-    <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>Cart</a></li>
+    <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
+    <li>
+        <div class="divider"></div>
+    </li>
+    <li><a><i class="material-icons left">settings</i>Settings</a></li>
+    <li><a><i class="material-icons left">phonelink</i>Download Mobile App</a></li>
+    <li><a><i class="material-icons left">help</i>Help</a></li>
+    <li>
+        <div class="divider"></div>
+    </li>
+    <li><a><i class="material-icons left">supervisor_account</i>Contact Us</a></li>
 </ul>
 
 <script>
-
 </script>
