--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,10 +1,10 @@
 <nav class="light-blue lighten-1">
     <div class="nav-wrapper">
-        <a routerLink="../" class="brand-logo">Logo</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="left hide-on-med-and-down">
+            <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
+        </ul>
         <ul class="right hide-on-med-and-down">
-            <li><a routerLink="../"><i class="material-icons left">home</i> Home</a>
-            </li>
             <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
             <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
             <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
