--- a/src/app/buyer/buyer.component.html
+++ b/src/app/buyer/buyer.component.html
@@ -1,34 +1,21 @@
-<!-- <div class="all-menu">
-    <p class="center head-text">Menu </p>
-    <div class="card bg-light text-dark" *ngFor="let item of menuItems">
-        <div class="card-body center">
-            <h4 class="card-title">{{ item.name }} </h4>
-            <p class="card-text">Price: ₹{{ item.price }} </p>
-            <button (click)="addToCart(item)" class="btn btn-secondary">+</button>
-        </div>
-    </div>
-
-    
-</div> -->
-
 <div class="container">
     <div class="row center">
-        <div class="col s12 m4" *ngFor="let item of menuItems">
-            <div class="card">
+        <div class="col s12 m4" *ngFor="let item of data">
+            <div class="card" *ngIf="item.payload.doc.data().name != ''">
                 <div class="card-image">
                     <img src="../../assets/fast food.jpg">
                     <a (click)="addToCart(item)" class="btn-floating halfway-fab waves-effect waves-light red"><i
                             class="material-icons">add</i></a>
                 </div>
                 <div class="card-content">
-                    <span class="card-title">{{ item.name }}</span>
-                    <p>Price: ₹{{ item.price }}</p>
+                    <span class="card-title">{{ item.payload.doc.data().name }}</span>
+                    <p>Price: ₹{{ item.payload.doc.data().price }}</p>
                 </div>
             </div>
         </div>
 
 
-        <div class="col s12 m12 page-center" *ngIf="menuItems.length == 0">
+        <div class="col s12 m12 page-center" *ngIf="data.length == 1">
             <i class="material-icons large">hourglass_empty</i>
             <h5>Seller do not have any product listed</h5>
         </div>
