--- a/src/app/top-pick-menu/top-pick-menu.component.html
+++ b/src/app/top-pick-menu/top-pick-menu.component.html
@@ -1,13 +1,13 @@
 <div class="row center">
     <div class="col s12 m4" *ngFor="let item of items">
-        <div class="card">
+        <div class="card" *ngIf="item.payload.doc.data().price != 0">
             <div class="card-image">
                 <img src="../../assets/fast food.jpg">
                 <a (click)="addToCart(item)" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
             <div class="card-content">
-                <span class="card-title">{{ item.name }}</span>
-                <p>Price: ₹{{ item.price }}</p>
+                <span class="card-title">{{ item.payload.doc.data().name }}</span>
+                <p>Price: ₹{{ item.payload.doc.data().price }}</p>
             </div>
         </div>
     </div>
