Delete functionality in cart

--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -1,25 +1,25 @@
-<nav class="light-blue lighten-1">
+<nav class="red darken-1 lighten-1">
     <div class="nav-wrapper">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="left hide-on-med-and-down">
             <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-            <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
-            <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
+            <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
             <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
+            <li><a><i class="material-icons left">account_circle</i> Profile</a></li>
         </ul>
     </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
     <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
-    <li><a routerLink="../buyer"><i class="material-icons left">account_circle</i> Consumer</a></li>
-    <li><a routerLink="../seller"><i class="material-icons left">shop</i>Seller</a></li>
+    <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
     <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
     <li>
         <div class="divider"></div>
     </li>
+    <li><a><i class="material-icons left">account_circle</i> Profile</a></li>
     <li><a><i class="material-icons left">settings</i>Settings</a></li>
     <li><a><i class="material-icons left">phonelink</i>Download Mobile App</a></li>
     <li><a><i class="material-icons left">help</i>Help</a></li>
