--- a/src/app/seller/seller.component.html
+++ b/src/app/seller/seller.component.html
@@ -13,6 +13,15 @@
                     <input id="price" type="number" class="validate" formControlName="price">
                     <label for="price">Price</label>
                 </div>
+                <div class="switch center">
+                    <h6>Available</h6>
+                    <label>
+                          No
+                          <input type="checkbox" class="validate" formControlName="available">
+                          <span class="lever"></span>
+                          Yes
+                    </label>
+                </div>
             </div>
             <br>
             <div class="row center">
