--- a/src/app/buyer/buyer.component.html
+++ b/src/app/buyer/buyer.component.html
@@ -1,11 +1,10 @@
 <div class="container">
     <div class="row center">
         <div class="col s12 m4" *ngFor="let item of data">
-            <div class="card" *ngIf="item.payload.doc.data().name != ''">
+            <div class="card" *ngIf="item.payload.doc.data().available">
                 <div class="card-image">
                     <img src="../../assets/fast food.jpg">
-                    <a (click)="addToCart(item)" class="btn-floating halfway-fab waves-effect waves-light red"><i
-                            class="material-icons">add</i></a>
+                    <a (click)="addToCart(item)" onclick="M.toast({html: 'Added To Cart!'})" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
                 </div>
                 <div class="card-content">
                     <span class="card-title">{{ item.payload.doc.data().name }}</span>
@@ -13,7 +12,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="col s12 m12 page-center" *ngIf="data.length == 0">
             <i class="material-icons large">hourglass_empty</i>
