--- a/src/app/top-pick-menu/top-pick-menu.component.html
+++ b/src/app/top-pick-menu/top-pick-menu.component.html
@@ -3,7 +3,7 @@
         <div class="card" *ngIf="item.payload.doc.data().price != 0">
             <div class="card-image">
                 <img src="../../assets/fast food.jpg">
-                <a (click)="addToCart(item)" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                <a (click)="addToCart(item)" onclick="M.toast({html: 'Added To Cart!'})" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
             <div class="card-content">
                 <span class="card-title">{{ item.payload.doc.data().name }}</span>
