Clear cart on payment, static payment component added

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -5,7 +5,7 @@
         <h5 class="header col s12 light">Choose the food you love . . .</h5>
     </div>
     <div class="row center">
-        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange">Go To Menu</a>
+        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange"><i class="material-icons left">restaurant_menu</i>Go To Menu</a>
     </div>
     <br><br>
 
