--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -14,10 +14,13 @@
             </div>
         </div>
 
-
         <div class="col s12 m12 page-center" *ngIf="orderItems.length == 0">
             <i class="material-icons large">hourglass_empty</i>
             <h5>Your cart feels too light</h5>
         </div>
+    </div>
+
+    <div class="row center">
+        <a id="download-button" class="btn-large waves-effect waves-light orange"><i class="material-icons left">payment</i>Payment</a>
     </div>
 </div>
