Seller's order to prepare added

--- a/src/app/buyer/buyer.component.html
+++ b/src/app/buyer/buyer.component.html
@@ -17,6 +17,9 @@
             <i class="material-icons large">hourglass_empty</i>
             <h5>Seller do not have any product listed</h5>
         </div>
+    </div>
 
+    <div class="row center">
+        <a id="download-button" routerLink="../orderList" class="btn-large waves-effect waves-light orange"><i class="material-icons left">shopping_cart</i>View Orders</a>
     </div>
 </div>
