--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -7,6 +7,7 @@
         <ul class="right hide-on-med-and-down">
             <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
             <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
+            <li><a routerLink="../payment"><i class="material-icons left">payment</i>Payment</a></li>
             <li><a><i class="material-icons left">account_circle</i> Profile</a></li>
         </ul>
     </div>
