--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -21,6 +21,6 @@
     </div>
 
     <div class="row center">
-        <a id="download-button" class="btn-large waves-effect waves-light orange"><i class="material-icons left">payment</i>Payment</a>
+        <a id="download-button" routerLink="../payment" class="btn-large waves-effect waves-light orange"><i class="material-icons left">payment</i>Payment</a>
     </div>
 </div>
