--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row center">
-        <form class="col s12" (ngSubmit)="clearCart()" [formGroup]="paymentForm">
+        <form class="col s12" (ngSubmit)="prepareOrder()" [formGroup]="paymentForm">
             <div class="input-field col s6">
                 <i class="material-icons prefix">account_circle</i>
                 <input id="firstName" type="text" class="validate" formControlName="firstName">
@@ -17,7 +17,7 @@
             </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">phone</i>
-                <input id="number" type="number" data-lenght="10" class="validate" formControlName="number">
+                <input id="number" type="number" maxlength="10" class="validate" formControlName="number">
                 <label for="number">Number</label>
             </div>
             <div class="row center">
