Connected seller views

--- a/src/app/buyer/buyer.component.html
+++ b/src/app/buyer/buyer.component.html
@@ -20,6 +20,6 @@
     </div>
 
     <div class="row center">
-        <a id="download-button" routerLink="../orderList" class="btn-large waves-effect waves-light orange"><i class="material-icons left">shopping_cart</i>View Orders</a>
+        <a routerLink="../orderList" class="btn-large waves-effect waves-light orange"><i class="material-icons left">shopping_cart</i>View Orders</a>
     </div>
 </div>
