--- a/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
+++ b/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
@@ -23,4 +23,8 @@
             <h5>No items to prepare</h5>
         </div>
     </div>
+
+    <div class="row center">
+        <a routerLink="../seller" class="btn-large waves-effect waves-light orange"><i class="material-icons left">add_circle</i>Add Items</a>
+    </div>
 </div>
