--- a/src/app/seller/seller.component.html
+++ b/src/app/seller/seller.component.html
@@ -29,4 +29,9 @@
             </div>
         </form>
     </div>
+
+    <div class="row center">
+        <a routerLink="../sellerMenu" class="btn-large waves-effect waves-light orange"><i class="material-icons left">mode_edit</i>Manage Menu</a>
+    </div>
+
 </div>
