--- a/src/app/seller-menu/seller-menu.component.html
+++ b/src/app/seller-menu/seller-menu.component.html
@@ -28,4 +28,9 @@
         </div>
 
     </div>
+
+    <div class="row center">
+        <a routerLink="../toPrepare" class="btn-large waves-effect waves-light orange"><i class="material-icons left">done_all</i>Orders To prepare</a>
+    </div>
+
 </div>
