count handling added

--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -10,6 +10,7 @@
                         class="material-icons">delete_forever</i></a>
                     <span class="card-title">{{ item.payload.doc.data().name }}</span>
                     <p>Price: ₹{{ item.payload.doc.data().price }}</p>
+                    <p>Amount: {{ item.payload.doc.data().count}}</p>
                 </div>
             </div>
         </div>
