--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,47 @@
-<p>footer works!</p>
+<footer class="page-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col l3 s12">
+                <h5 class="white-text">Frezzo</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
+                </p>
+            </div>
+            <div class="col l6  s12">
+                <div class="row">
+                    <div class="col l3">
+                        <h5 class="white-text">Link1</h5>
+                    </div>
+                    <div class="col l3">
+                        <h5 class="white-text">Link2</h5>
+                    </div>
+                    <div class="col l3">
+                        <h5 class="white-text">Link3</h5>
+                    </div>
+                    <div class="col l3">
+                        <h5 class="white-text">Link4</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col l3  s12">
+                <div class="row">
+
+                    <div class="col l3">
+                        <h5 class="white-text"><i class='lni lni-facebook-filled'></i></h5>
+                    </div>
+                    <div class="col l3">
+                        <h5 class="white-text"><i class='lni lni-twitter-filled'></i></h5>
+                    </div>
+                    <div class="col l3">
+                        <h5 class="white-text"><i class='lni lni-instagram-filled'></i></h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+    </div>
+</footer>
