Fixed TopPick, footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,42 +6,18 @@
                 <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.
                 </p>
             </div>
-            <div class="col l6  s12">
-                <div class="row">
-                    <div class="col l3">
-                        <h5 class="white-text">Link1</h5>
-                    </div>
-                    <div class="col l3">
-                        <h5 class="white-text">Link2</h5>
-                    </div>
-                    <div class="col l3">
-                        <h5 class="white-text">Link3</h5>
-                    </div>
-                    <div class="col l3">
-                        <h5 class="white-text">Link4</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col l3  s12">
-                <div class="row">
-
-                    <div class="col l3">
-                        <h5 class="white-text"><i class='lni lni-facebook-filled'></i></h5>
-                    </div>
-                    <div class="col l3">
-                        <h5 class="white-text"><i class='lni lni-twitter-filled'></i></h5>
-                    </div>
-                    <div class="col l3">
-                        <h5 class="white-text"><i class='lni lni-instagram-filled'></i></h5>
-                    </div>
-                </div>
+            <div class="col l4 offset-l2 s12">
+                <ul class="right">
+                    <li><a class="grey-text text-lighten-3" routerLink="../buyer"><i class="material-icons">restaurant_menu</i>Menu</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../orderList"><i class="material-icons">shopping_cart</i>View Orders</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../payment"><i class="material-icons">payment</i>Payment</a></li>
+                </ul>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <div class="container center">
+            © 2020 Copyright Text
         </div>
     </div>
 </footer>
