Added seller navbar

--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -1,3 +1,4 @@
+<app-options></app-options>
 <div class="container">
     <div class="row center">
         <div class="col s12 m4" *ngFor="let item of orderItems">
