--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,3 +1,4 @@
+<app-options></app-options>
 <div class="container">
     <div class="row center">
         <form class="col s12" (ngSubmit)="prepareOrder()" [formGroup]="paymentForm">
