--- a/src/app/seller/seller.component.html
+++ b/src/app/seller/seller.component.html
@@ -1,4 +1,5 @@
-<h5 class="center head-text">Add product</h5>
+<app-seller-navbar></app-seller-navbar>
+<h5 class="center">Add product</h5>
 <br><br>
 
 <div class="container">
