--- a/src/app/seller-navbar/seller-navbar.component.html
+++ b/src/app/seller-navbar/seller-navbar.component.html
@@ -2,21 +2,19 @@
     <div class="nav-wrapper">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="left hide-on-med-and-down">
-            <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
+            <li><a routerLink="../seller"><i class="material-icons left">home</i> Home</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-            <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
-            <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
-            <li><a routerLink="../payment"><i class="material-icons left">payment</i>Payment</a></li>
+            <li><a routerLink="../sellerMenu"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
+            <li><a routerLink="../toPrepare"><i class="material-icons left">shopping_cart</i>Order to Prepare</a></li>
             <li><a><i class="material-icons left">account_circle</i> Profile</a></li>
         </ul>
     </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a routerLink="../"><i class="material-icons left">home</i> Home</a></li>
-    <li><a routerLink="../buyer"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
-    <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>View Orders</a></li>
+    <li><a routerLink="../sellerMenu"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
+    <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>Order to Prepare</a></li>
     <li>
         <div class="divider"></div>
     </li>
