--- a/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
+++ b/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
@@ -1,3 +1,4 @@
+<app-seller-navbar></app-seller-navbar>
 <div class="container">
     <div class="row center">
         <div class="col s12 m4" *ngFor="let item of data">
