Seller footer added

--- a/src/app/buyer/buyer.component.html
+++ b/src/app/buyer/buyer.component.html
@@ -24,3 +24,4 @@
         <a routerLink="../orderList" class="btn-large waves-effect waves-light orange"><i class="material-icons left">shopping_cart</i>View Orders</a>
     </div>
 </div>
+<app-footer></app-footer>
