--- a/src/app/order-list/order-list.component.html
+++ b/src/app/order-list/order-list.component.html
@@ -26,3 +26,4 @@
         <a id="download-button" routerLink="../payment" class="btn-large waves-effect waves-light orange"><i class="material-icons left">payment</i>Payment</a>
     </div>
 </div>
+<app-footer></app-footer>
