--- a/src/app/seller-footer/seller-footer.component.html
+++ b/src/app/seller-footer/seller-footer.component.html
@@ -7,9 +7,9 @@
             </div>
             <div class="col l4 offset-l2 s12">
                 <ul class="right">
-                    <li><a class="grey-text text-lighten-3" routerLink="../buyer"><i class="material-icons">restaurant_menu</i>Menu</a></li>
-                    <li><a class="grey-text text-lighten-3" routerLink="../orderList"><i class="material-icons">shopping_cart</i>View Orders</a></li>
-                    <li><a class="grey-text text-lighten-3" routerLink="../payment"><i class="material-icons">payment</i>Payment</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../seller"><i class="material-icons">add_box</i>Add a product</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../sellerMenu"><i class="material-icons">restaurant_menu</i>Menu</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../toPrepare"><i class="material-icons">shopping_cart</i>Order to Prepare</a></li>
                 </ul>
             </div>
         </div>
