--- a/src/app/seller-menu/seller-menu.component.html
+++ b/src/app/seller-menu/seller-menu.component.html
@@ -33,5 +33,5 @@
     <div class="row center">
         <a routerLink="../toPrepare" class="btn-large waves-effect waves-light orange"><i class="material-icons left">done_all</i>Orders To prepare</a>
     </div>
-
 </div>
+<app-seller-footer></app-seller-footer>
