--- a/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
+++ b/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
@@ -29,3 +29,4 @@
         <a routerLink="../seller" class="btn-large waves-effect waves-light orange"><i class="material-icons left">add_circle</i>Add Items</a>
     </div>
 </div>
+<app-seller-footer></app-seller-footer>
