Changed Layout in orders to prepare

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="footer-copyright">
         <div class="container center">
-            © 2020 Copyright Text
+            © 2020 Copyright Frezzo
         </div>
     </div>
 </footer>
