Push notifications working

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,4 +1,6 @@
-{{ message | async | json }}
+<div style="display: none;">
+    {{ message | async | json }}
+</div>
 <app-options></app-options>
 <div class="container">
     <br><br>
