Minor changes to footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,15 @@
 <footer class="page-footer">
     <div class="container">
         <div class="row">
-            <div class="col l3 s12">
+            <div class="col l6 s12">
                 <h5 class="white-text">Frezzo</h5>
                 <p class="grey-text text-lighten-4">Making your food-ordering experiance a delight!</p>
             </div>
-            <div class="col l4 offset-l2 s12">
-                <ul class="right">
-                    <li><a class="grey-text text-lighten-3" routerLink="../buyer"><i class="material-icons">restaurant_menu</i>Menu</a></li>
-                    <li><a class="grey-text text-lighten-3" routerLink="../orderList"><i class="material-icons">shopping_cart</i>View Orders</a></li>
-                    <li><a class="grey-text text-lighten-3" routerLink="../payment"><i class="material-icons">payment</i>Payment</a></li>
+            <div class="col l4 offset-l2 s12 center">
+                <ul>
+                    <li><a class="grey-text text-lighten-3" routerLink="../buyer">Menu</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../orderList">View Orders</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../payment">Payment</a></li>
                 </ul>
             </div>
         </div>
