--- a/src/app/seller-footer/seller-footer.component.html
+++ b/src/app/seller-footer/seller-footer.component.html
@@ -5,11 +5,11 @@
                 <h5 class="white-text">Frezzo</h5>
                 <p class="grey-text text-lighten-4">Making your food-ordering experiance a delight!</p>
             </div>
-            <div class="col l4 offset-l2 s12">
-                <ul class="right">
-                    <li><a class="grey-text text-lighten-3" routerLink="../seller"><i class="material-icons">add_box</i> Add a product</a></li>
-                    <li><a class="grey-text text-lighten-3" routerLink="../sellerMenu"><i class="material-icons">restaurant_menu</i> Menu</a></li>
-                    <li><a class="grey-text text-lighten-3" routerLink="../toPrepare"><i class="material-icons">shopping_cart</i> Order to Prepare</a></li>
+            <div class="col l4 offset-l2 s12 center">
+                <ul>
+                    <li><a class="grey-text text-lighten-3" routerLink="../seller">Add a product</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../sellerMenu">Menu</a></li>
+                    <li><a class="grey-text text-lighten-3" routerLink="../toPrepare">Order to Prepare</a></li>
                 </ul>
             </div>
         </div>
