--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,6 +1,3 @@
-<div style="display: none;">
-    {{ message | async | json }}
-</div>
 <app-options></app-options>
 <div class="container">
     <br><br>
@@ -9,10 +6,10 @@
         <h5 class="header col s12 light">Choose the food you love . . .</h5>
     </div>
     <div class="row center">
-        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange"><i class="material-icons left">restaurant_menu</i>Go To Menu</a>
+        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange"><i
+                class="material-icons left">restaurant_menu</i>Go To Menu</a>
     </div>
     <br><br>
-
     <app-top-pick-menu></app-top-pick-menu>
 
 </div>
