--- a/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
+++ b/src/app/seller-order-to-prepare/seller-order-to-prepare.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="row center">
-        <a routerLink="../seller" class="btn-large waves-effect waves-light orange"><i class="material-icons left">add_circle</i>Add Items</a>
+        <a routerLink="../addProduct" class="btn-large waves-effect waves-light orange"><i class="material-icons left">add_circle</i>Add Items</a>
     </div>
 </div>
 <app-seller-footer></app-seller-footer>
