--- a/src/app/seller/seller.component.html
+++ b/src/app/seller/seller.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="row center">
-        <a routerLink="../sellerMenu" class="btn-large waves-effect waves-light orange"><i class="material-icons left">mode_edit</i>Manage Menu</a>
+        <a routerLink="../seller" class="btn-large waves-effect waves-light orange"><i class="material-icons left">mode_edit</i>Manage Menu</a>
     </div>
 </div>
 <app-seller-footer></app-seller-footer>
