--- a/src/app/seller-navbar/seller-navbar.component.html
+++ b/src/app/seller-navbar/seller-navbar.component.html
@@ -5,7 +5,7 @@
             <li><a routerLink="../seller"><i class="material-icons left">home</i> Home</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-            <li><a routerLink="../sellerMenu"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
+            <li><a routerLink="../addProduct"><i class="material-icons left">add_box</i>Add Product</a></li>
             <li><a routerLink="../toPrepare"><i class="material-icons left">shopping_cart</i>Order to Prepare</a></li>
             <li><a><i class="material-icons left">account_circle</i> Profile</a></li>
         </ul>
@@ -13,7 +13,8 @@
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a routerLink="../sellerMenu"><i class="material-icons left">restaurant_menu</i>Menu</a></li>
+    <li><a routerLink="../sellerMenu"><i class="material-icons left">home</i> Home</a></li>
+    <li><a routerLink="../addProduct"><i class="material-icons left">add_box</i>Add Product</a></li>
     <li><a routerLink="../orderList"><i class="material-icons left">shopping_cart</i>Order to Prepare</a></li>
     <li>
         <div class="divider"></div>
