--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -6,14 +6,14 @@
         <h5 class="header col s12 light">Choose the food you love . . .</h5>
     </div>
     <div class="row center">
-        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange"><i
-                class="material-icons left">restaurant_menu</i>Go To Menu</a>
+        <a id="download-button" routerLink="../buyer" class="btn-large waves-effect waves-light orange"><i class="material-icons left">restaurant_menu</i>Go To Menu</a>
     </div>
     <br><br>
     <app-top-pick-menu></app-top-pick-menu>
 
 </div>
-<div>
+<!-- To display if the token is recieved or not -->
+<!-- <div>
     {{message | async | json}}
-</div>
+</div> -->
 <app-footer></app-footer>
